# TCPFS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: main.rs  storage.rs
meta/: Cargo.toml
meta-sqlite/: Cargo.toml
meta-sqlite/src/: lib.rs
meta/src/: lib.rs
protocol/: Cargo.toml  build.rs
protocol/src/: lib.rs
python-client/: example.txt  mt_client.py  pyproject.toml  tcpfs_client.py
server/: Cargo.toml
server/src/: main.rs
