[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.28.1", default-features = false }
eframe = { version = "0.28.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.28.1",features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rusqlite = "0.32.1"